# zhed

./: .gitignore  LICENSE.txt  README.md  pyproject.toml
.github/workflows/: ci.yaml
src/zhed/: __init__.py  benchmark.py  cli.py  levels.yaml  loading.py  logging_utils.py  models.py  mover.py  player.py  printer.py  solver.py  utils.py
src/zhed/data/: levels.yaml  solutions.yaml
tests/: conftest.py  test_models.py  test_mover.py  test_solutions.py  test_solver.py  test_utils.py  test_version.py
